# supercell

./: .agent-iterations.db  .agent-iterations.db-shm  .aionrs.toml  .env.example  README.md  Supercell-介绍.docx  Supercell-代码质量报告.pptx  eslint.config.js  index.html  package-lock.json  package.json  test-2..md  vite.config.ts  vitest.config.ts  保护小鸟.pptx  录屏2026-05-19 14.07.56.mov  蚂蚁的眼睛好漂亮.docx
.aionrs/sessions/: 2026-05-12_9ee1ef59.json  index.json
.claude/: settings.local_aionui_1778569220044.json
.ma/: README.md
.ma/skills/: deploy.md  git-status.md  help.md
.wanman/: agents.json  live-dashboard.txt  wanman.db
.wanman/home/: .bash_profile  .claude  .codex  .config  .gitconfig  .ssh
coverage/: clover.xml  coverage-final.json  index.html
docs/: ARCH-tech-evaluation.md  DATALENS-sql-benchmark.md  DATALENS-test-plan.md  DESIGN-interaction.md  DESIGN-sitemap.md  DESIGN-states.md  DESIGN-visual-style.md  DESIGN-wireframes.md  DataLens-PRD.md  PRD-modules.md  PRD-overview.md  PRD-prompts.md  PRD-roles.md  PRD-tech.md  PRD-visual.md  PRD-workspace.md  TEST-strategy.md
reports/: qa-test-assessment.md
server/: index.ts
server/agents/: architecture.ts  base.ts  code.ts  developer.ts  feature.ts  orchestrator.ts  pm.ts  product.ts  tester.ts  ux.ts  xiao-q.ts
server/datalens/: chart-gen.ts  duckdb-executor.ts  index.ts  llm-provider.ts  preset-questions.ts  query-pipeline.ts  text-to-sql.ts
server/db/: index.ts
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx  不要随意放生小乌龟.pptx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs
(+81 files in other folders)
