[package]
name = "datalens"
version = "0.1.0"
description = "DataLens - Local-first data analysis workbench"
authors = ["DataLens Team"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
duckdb = { version = "1.2", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
